@@ -27,13 +27,16 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import com.tencent.cloud.common.constant.OrderConstant;
+import com.tencent.cloud.common.constant.RouterConstant;
 import com.tencent.cloud.common.metadata.MetadataContext;
 import com.tencent.cloud.common.metadata.MetadataContextHolder;
-import com.tencent.cloud.common.metadata.config.MetadataLocalProperties;
+import com.tencent.cloud.common.metadata.StaticMetadataManager;
 import com.tencent.cloud.common.util.JacksonUtils;
-import com.tencent.cloud.polaris.router.RouterConstants;
+import com.tencent.cloud.common.util.expresstion.ExpressionLabelUtils;
+import com.tencent.cloud.polaris.context.config.PolarisContextProperties;
 import com.tencent.cloud.polaris.router.RouterRuleLabelResolver;
-import com.tencent.cloud.polaris.router.spi.RouterLabelResolver;
+import com.tencent.cloud.polaris.router.spi.FeignRouterLabelResolver;
 import feign.RequestInterceptor;
 import feign.RequestTemplate;
 import org.slf4j.Logger;
@@ -42,21 +45,25 @@ import org.slf4j.LoggerFactory;
 import org.springframework.core.Ordered;
 import org.springframework.util.CollectionUtils;
 
+import static com.tencent.cloud.common.constant.ContextConstant.UTF_8;
+
 /**
  * Resolver labels from request.
  *
- *@author lepdou 2022-05-12
+ * @author lepdou, Hoatian Zhang
  */
 public class RouterLabelFeignInterceptor implements RequestInterceptor, Ordered {
 	private static final Logger LOGGER = LoggerFactory.getLogger(RouterLabelFeignInterceptor.class);
 
-	private final List<RouterLabelResolver> routerLabelResolvers;
-	private final MetadataLocalProperties metadataLocalProperties;
+	private final List<FeignRouterLabelResolver> routerLabelResolvers;
+	private final StaticMetadataManager staticMetadataManager;
 	private final RouterRuleLabelResolver routerRuleLabelResolver;
+	private final PolarisContextProperties polarisContextProperties;
 
-	public RouterLabelFeignInterceptor(List<RouterLabelResolver> routerLabelResolvers,
-			MetadataLocalProperties metadataLocalProperties,
-			RouterRuleLabelResolver routerRuleLabelResolver) {
+	public RouterLabelFeignInterceptor(List<FeignRouterLabelResolver> routerLabelResolvers,
+			StaticMetadataManager staticMetadataManager,
+			RouterRuleLabelResolver routerRuleLabelResolver,
+			PolarisContextProperties polarisContextProperties) {
 		if (!CollectionUtils.isEmpty(routerLabelResolvers)) {
 			routerLabelResolvers.sort(Comparator.comparingInt(Ordered::getOrder));
 			this.routerLabelResolvers = routerLabelResolvers;
@@ -64,30 +71,34 @@ public class RouterLabelFeignInterceptor implements RequestInterceptor, Ordered 
 		else {
 			this.routerLabelResolvers = null;
 		}
-		this.metadataLocalProperties = metadataLocalProperties;
+		this.staticMetadataManager = staticMetadataManager;
 		this.routerRuleLabelResolver = routerRuleLabelResolver;
+		this.polarisContextProperties = polarisContextProperties;
 	}
 
 	@Override
 	public int getOrder() {
-		return 0;
+		return OrderConstant.Client.Feign.ROUTER_LABEL_INTERCEPTOR_ORDER;
 	}
 
 	@Override
 	public void apply(RequestTemplate requestTemplate) {
 		// local service labels
-		Map<String, String> labels = new HashMap<>(metadataLocalProperties.getContent());
+		Map<String, String> labels = new HashMap<>(staticMetadataManager.getMergedStaticMetadata());
 
 		// labels from rule expression
 		String peerServiceName = requestTemplate.feignTarget().name();
-		Map<String, String> ruleExpressionLabels = getRuleExpressionLabels(requestTemplate, peerServiceName);
+		Set<String> expressionLabelKeys = routerRuleLabelResolver.getExpressionLabelKeys(MetadataContext.LOCAL_NAMESPACE,
+				MetadataContext.LOCAL_SERVICE, peerServiceName);
+
+		Map<String, String> ruleExpressionLabels = getRuleExpressionLabels(requestTemplate, expressionLabelKeys);
 		labels.putAll(ruleExpressionLabels);
 
-		// labels from request
+		// labels from custom spi
 		if (!CollectionUtils.isEmpty(routerLabelResolvers)) {
 			routerLabelResolvers.forEach(resolver -> {
 				try {
-					Map<String, String> customResolvedLabels = resolver.resolve(requestTemplate);
+					Map<String, String> customResolvedLabels = resolver.resolve(requestTemplate, expressionLabelKeys);
 					if (!CollectionUtils.isEmpty(customResolvedLabels)) {
 						labels.putAll(customResolvedLabels);
 					}
@@ -99,34 +110,35 @@ public class RouterLabelFeignInterceptor implements RequestInterceptor, Ordered 
 		}
 
 		// labels from downstream
-		Map<String, String> transitiveLabels = MetadataContextHolder.get()
-				.getFragmentContext(MetadataContext.FRAGMENT_TRANSITIVE);
+		Map<String, String> transitiveLabels = MetadataContextHolder.get().getTransitiveMetadata();
 		labels.putAll(transitiveLabels);
 
 		// pass label by header
-		if (labels.size() == 0) {
-			requestTemplate.header(RouterConstants.ROUTER_LABEL_HEADER);
-			return;
-		}
+		String encodedLabelsContent;
 		try {
-			String headerMetadataStr = URLEncoder.encode(JacksonUtils.serialize2Json(labels), "UTF-8");
-			requestTemplate.header(RouterConstants.ROUTER_LABEL_HEADER, headerMetadataStr);
+			encodedLabelsContent = URLEncoder.encode(JacksonUtils.serialize2Json(labels), UTF_8);
 		}
 		catch (UnsupportedEncodingException e) {
-			LOGGER.error("Set header failed.", e);
-			throw new RuntimeException(e);
+			throw new RuntimeException("unsupported charset exception " + UTF_8);
 		}
+		requestTemplate.header(RouterConstant.ROUTER_LABEL_HEADER, encodedLabelsContent);
 	}
 
-	private Map<String, String> getRuleExpressionLabels(RequestTemplate requestTemplate, String peerService) {
-		Set<String> labelKeys = routerRuleLabelResolver.getExpressionLabelKeys(MetadataContext.LOCAL_NAMESPACE,
-				MetadataContext.LOCAL_SERVICE, peerService);
-
+	private Map<String, String> getRuleExpressionLabels(RequestTemplate requestTemplate, Set<String> labelKeys) {
 		if (CollectionUtils.isEmpty(labelKeys)) {
 			return Collections.emptyMap();
 		}
 
-		return FeignExpressionLabelUtils.resolve(requestTemplate, labelKeys);
-	}
+		//enrich labels from request
+		Map<String, String> labels = FeignExpressionLabelUtils.resolve(requestTemplate, labelKeys);
 
+		//enrich caller ip label
+		for (String labelKey : labelKeys) {
+			if (ExpressionLabelUtils.isCallerIPLabel(labelKey)) {
+				labels.put(labelKey, polarisContextProperties.getLocalIpAddress());
+			}
+		}
+
+		return labels;
+	}
 }
